# byte-y

./: .gitignore  BYO_FORMAT.md  CMakeLists.txt  README.md
config/: README.md  x86.c
include/bytey/: arena.h  defines.h  io.h
include/bytey/in/: README.md  global.h  main.h  parser.h
src/: arena.c  io.c
src/in/: global.c  lex.h  parser.c
